k8s/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: search-engine
  namespace: search-engine
  labels:
    app: search-engine
    component: api
spec:
  type: ClusterIP
  selector:
    app: search-engine
    component: api
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
