k8s/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: search-engine
  labels:
    app: search-engine
    component: postgres
spec:
  type: ClusterIP
  selector:
    app: search-engine
    component: postgres
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
